--- a/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
@@ -1,13 +1,9 @@
-
- <script>
-    alert ('Tz')
-    </script>
+FULL FINAL INDIA
 
 <div class="row">
     <div class="col-md-3" ng-show="page.showFilter" style="padding-right:0px; margin-right:0px;  ">
         <filter-box page="page"></filter-box>
     </div>
-    HELLO
     <div ng-class="{'col-md-12':!page.showFilter, 'col-md-9':page.showFilter}" style="padding-left:0px; margin-left:0px;">
         <grid-box page="page" box-options="boxSetting">
         </grid-box>
