--- a/src/app/pages/organization/employees/templates/document/browseModal.html
+++ b/src/app/pages/organization/employees/templates/document/browseModal.html
@@ -1,24 +1,22 @@
-<div class="modal-content" ng-controller="documentUploadController">
+<div class="modal-content">
     <div class="modal-header">
-
         <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
                 <em class="ion-ios-close-empty sn-link-close"></em>
               </button>
-        <h4 class="modal-title" id="myModalLabel">Upload File</h4>
+        <h4 class="modal-title" id="myModalLabel"><i class="ion-archive"></i> Downlaod File</h4>
     </div>
     <div class="modal-body">
-        <label class="control-label ">Select a file to upload:</label>
-        <label class="btn btn-success btn-file"> Browse
-             <input type="file" file-Model="file"
-                      accept=".xls,.xlsx,.ods"  
-                      readfiledata                   
-                      style="display: none;">
-            </label>
+        <div class="list-group">
+            <!-- <a ng-click="vm.previewFile()" class="list-group-item" tabindex="0">
+                <i class="ion-star"></i>
+                View File
+                <i class="pull-right ion-chevron-right"></i>
+            </a> -->
+            <a href ng-click="downloadFile()" class="list-group-item" tabindex="0">
+                <i class="ion-archive"></i>
+                Download File
+                <i class="pull-right ion-chevron-right"></i>
+            </a>
+        </div>
     </div>
-
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="upload()">Upload</button>
-        <button class="btn btn-primary" ng-click="$dismiss()">Cancel</button>
-    </div>
-
 </div>
