--- a/src/app/pages/organization/employees/templates/document/document-view.html
+++ b/src/app/pages/organization/employees/templates/document/document-view.html
@@ -27,7 +27,7 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <div ui-grid="documentOptions" ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                <div ui-grid="documentOptions" ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid" style="height:200px"></div>
             </div>
         </div>
         <hr>
