--- a/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
+++ b/src/app/pages/payroll/transaction/FullAndFinalDetail/payroll.FullAndFinalDetail.html
@@ -2,7 +2,7 @@
 </grid-box>
 
 
-<form name="editForm " novalidate ng-submit="saveForm(entity) " ng-hide="showEditForm ">
+<form name="editForm " novalidate ng-submit="saveForm() " ng-hide="showEditForm ">
     <div class="panel panel-default xmedium-panel ">
         <edit-panel-head page="page" page-title="page.pageinfo.title " reset-form="resetFormCommon(editForm) " clear-form="clearFormCommon(editForm) "
             close-form="closeForm(editForm) " show-close="true " show-save="true " show-clear="true " show-list="false
@@ -58,12 +58,12 @@
                 <div class="col-md-1">
                     <label></label>
                     <div>
-                        <button class="btn btn-primary" ng-click="getEmpFullAndFinal();">Show</button>
+                        <button class="btn btn-primary" type="button" ng-click="getEmpFullAndFinal();">Show</button>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" ng-show="showOnClick">
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-md-12">
@@ -134,25 +134,20 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label>{{page.pageinfo.fields.FAFDPayDays.text}}</label>
-                                <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
+                                <label>{{page.pageinfo.fields.LoanOutStandingAmount.text}}</label>
+                                <input class="form-control" type="text" ng-model="entity.LoanOutstanding">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-9">
+                        <div class="col-md-12">
                             <div class="form-group">
-                                <label>Pay Day + Encashment EL</label>
-                                <input class="form-control" type="text" ng-model="entity.ACODIsApplyFullDay">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <label></label>
-                            <div>
-                                <button class="btn btn-primary" ng-click="calculatedEmpSalary();">Calculate</button>
+                                <label>{{page.pageinfo.fields.FAFDPayDays.text}}</label>
+                                <input class="form-control" type="text" ng-change="totalPayDays()" ng-model="entity.payDays">
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="col-md-8">
                     <div class="row">
@@ -164,9 +159,43 @@
                 </div>
             </div>
 
+            <div class="row" ng-show="showOnClick">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label>Pay Day + Encashment EL</label>
+                        <!--<input class="form-control" type="text" ng-model="entity.totalPayDays">-->
+                        <span class="form-control" ng-bind="entity.totalPayDays"></span>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <label></label>
+                    <div>
+                        <button class="btn btn-primary" type="button" ng-click="calculatedEmpSalary();">Calculate</button>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label>Total Earning</label>
+                        <!--<input class="form-control" type="text" ng-model="entity.totalPayDays">-->
+                        <span class="form-control" ng-bind="entity.totalEarning"></span>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label>Total Deduction</label>
+                        <!--<input class="form-control" type="text" ng-model="entity.totalPayDays">-->
+                        <span class="form-control" ng-bind="entity.totalDeduction"></span>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label>Net Pay</label>
+                        <!--<input class="form-control" type="text" ng-model="entity.totalPayDays">-->
+                        <span class="form-control" ng-bind="entity.netPayment"></span>
+                    </div>
+                </div>
 
-
-
+            </div>
 
         </div>
     </div>
